Fix for project highlight image height on tablet

--- a/src/styles/modules/project-listing.less
+++ b/src/styles/modules/project-listing.less
@@ -194,7 +194,7 @@ Polaroid Project Listing
 
         .screenshot {
             max-width: 100%;
-            height: 128px;
+            height: auto;
             overflow: hidden;
             .opacity(0.8);
         }
